<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackGroundWelcome"
    tools:context=".ACTIVITY.Welcome.SignUpActivity">

  <TextView
      android:id="@+id/tv_welcome_signup"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:fontFamily="@font/opensans"
      android:letterSpacing="0.1"
      android:padding="20dp"
      android:text="@string/APP_NAME"
      android:textColor="@color/colorTextWhite"
      android:textSize="30sp"
      android:textStyle="bold"
      />

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_below="@id/tv_welcome_signup"
      android:background="@drawable/custom_login"
      android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:fontFamily="@font/lato_regular"
          android:letterSpacing="0.05"
          android:padding="20dp"
          android:text="@string/sign_up"
          android:textColor="@color/colorTextBlackAlpha"
          android:textSize="20sp" />

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:fontFamily="@font/helveticaneue_light"
          android:letterSpacing="0.08"
          android:paddingStart="20dp"
          android:text="@string/email"
          android:textColor="@color/colorTextBlackAlpha"
          android:textSize="15sp"
          android:textStyle="bold"
          tools:ignore="RtlSymmetry" />

      <EditText
          android:textSize="14sp"
          android:id="@+id/tv_signup_email"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginStart="15dp"
          android:layout_marginEnd="20dp"
          android:layout_marginBottom="10dp"
          android:autofillHints="true"
          android:fontFamily="@font/lato_regular"
          android:hint="@string/hint_email"
          android:inputType="textEmailAddress"
          android:theme="@style/MyEditTextCustom" />

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:fontFamily="@font/helveticaneue_light"
          android:letterSpacing="0.08"
          android:paddingStart="20dp"
          android:text="@string/password"
          android:textColor="@color/colorTextBlackAlpha"
          android:textSize="15sp"
          android:textStyle="bold"
          tools:ignore="RtlSymmetry" />

      <EditText
          android:layout_marginBottom="10dp"
          android:textSize="14sp"
          android:id="@+id/tv_signup_password"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginStart="15dp"
          android:layout_marginEnd="20dp"
          android:autofillHints="true"
          android:fontFamily="@font/lato_regular"
          android:hint="@string/hint_password"
          android:inputType="textPassword"
          android:theme="@style/MyEditTextCustom" />

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:fontFamily="@font/helveticaneue_light"
          android:letterSpacing="0.08"
          android:paddingStart="20dp"
          android:text="@string/password"
          android:textColor="@color/colorTextBlackAlpha"
          android:textSize="15sp"
          android:textStyle="bold"
          tools:ignore="RtlSymmetry" />

      <EditText
          android:textSize="14sp"
          android:id="@+id/tv_signup_ConfirmPassword"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginStart="15dp"
          android:layout_marginEnd="20dp"
          android:autofillHints="true"
          android:fontFamily="@font/lato_regular"
          android:hint="@string/hint_confirmpass"
          android:inputType="textPassword"
          android:theme="@style/MyEditTextCustom" />
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
      <Button
          android:id="@+id/bt_SignUp"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginStart="20dp"
          android:layout_marginEnd="20dp"
          android:background="@drawable/custom_button_login"
          android:elevation="30dp"
          android:fontFamily="@font/lato_regular"
          android:letterSpacing="0.1"
          android:text="@string/sign_up"
          android:textAllCaps="false"
          android:textColor="@color/colorTextWhite"
          android:textSize="14sp"
          android:textStyle="bold"
          tools:ignore="RtlSymmetry" />
      <LinearLayout
          android:orientation="horizontal"
          android:layout_width="match_parent"
          android:layout_height="wrap_content">
        <TextView
            android:alpha="0.8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/notosans"
            android:letterSpacing="0.08"
            android:paddingStart="50dp"
            android:text="@string/already_exists_account"
            android:textColor="@color/colorTextBlackAlpha"
            android:textSize="12sp"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry" />
        <Button
            android:id="@+id/bt_Login_SignUp"
            android:background="@android:color/transparent"
            android:textAllCaps="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato_regular"
            android:letterSpacing="0.08"
            android:text="@string/sign_in"
            android:textColor="@color/colorBackGroundWelcome"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry" />
      </LinearLayout>
    </LinearLayout>
  </LinearLayout>
</RelativeLayout>