<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackGroundWelcome"
    tools:context=".ACTIVITY.Welcome.SignInActivity">

    <TextView
        android:id="@+id/tv_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/opensans"
        android:letterSpacing="0.1"
        android:padding="20dp"
        android:text="@string/APP_NAME"
        android:textColor="@color/colorTextWhite"
        android:textSize="30sp"
        android:textStyle="bold"
        android:transitionName="app_name_transition" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/tv_welcome"
        android:background="@drawable/custom_login"
        android:orientation="vertical">
        <ProgressBar
            android:indeterminateTint="#FF1744"
            android:layout_marginTop="10dp"
            android:id="@+id/progress_loading"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_width="20dp"
            android:layout_height="20dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato_regular"
                android:letterSpacing="0.05"
                android:padding="10dp"
                android:text="@string/sign_in"
                android:textColor="@color/colorTextBlackAlpha"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/helveticaneue_light"
                android:letterSpacing="0.08"
                android:paddingStart="20dp"
                android:text="@string/email"
                android:textColor="@color/colorTextBlackAlpha"
                android:textSize="15sp"
                android:textStyle="bold"
                tools:ignore="RtlSymmetry" />

            <EditText
                android:textSize="14sp"
                android:id="@+id/tv_login_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:autofillHints="true"
                android:fontFamily="@font/lato_regular"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:theme="@style/MyEditTextCustom" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/helveticaneue_light"
                android:letterSpacing="0.08"
                android:paddingStart="20dp"
                android:text="@string/password"
                android:textColor="@color/colorTextBlackAlpha"
                android:textSize="15sp"
                android:textStyle="bold"
                tools:ignore="RtlSymmetry" />

            <EditText
                android:textSize="14sp"
                android:id="@+id/tv_login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="20dp"
                android:autofillHints="true"
                android:fontFamily="@font/lato_regular"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:theme="@style/MyEditTextCustom" />

            <Button
                android:id="@+id/bt_forgotPass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.9"
                android:background="@android:color/transparent"
                android:fontFamily="@font/lato_regular"
                android:letterSpacing="0.08"
                android:paddingStart="20dp"
                android:text="@string/forgot_password"
                android:textAllCaps="false"
                android:textColor="@color/colorTextBlackAlpha"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <Button
                android:id="@+id/bt_SignIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/custom_button_login"
                android:elevation="30dp"
                android:fontFamily="@font/lato_regular"
                android:letterSpacing="0.1"
                android:text="@string/sign_in"
                android:textAllCaps="false"
                android:textColor="@color/colorTextWhite"
                android:textSize="14sp"
                android:textStyle="bold"
                tools:ignore="RtlSymmetry" />
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:alpha="0.8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/notosans"
                    android:letterSpacing="0.08"
                    android:paddingStart="50dp"
                    android:text="@string/no_account"
                    android:textColor="@color/colorTextBlackAlpha"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    tools:ignore="RtlSymmetry" />
                <Button
                    android:id="@+id/bt_SignUp_Login"
                    android:background="@android:color/transparent"
                    android:textAllCaps="false"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato_regular"
                    android:letterSpacing="0.08"
                    android:text="Sign Up"
                    android:textColor="@color/colorBackGroundWelcome"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:ignore="RtlSymmetry" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:alpha="0.6"
                android:layout_marginTop="15dp"
                android:layout_marginStart="30dp"
                android:background="#919189"
                android:layout_weight="1.2"
                android:layout_width="0dp"
                android:layout_height="2dp"/>
            <TextView
                android:fontFamily="@font/opensans"
                android:alpha="0.6"
                android:textSize="15sp"
                android:gravity="center"
                android:text="@string/or_welcome"
                android:layout_weight="0.3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
            <LinearLayout
                android:alpha="0.6"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="30dp"
                android:background="#919189"
                android:layout_weight="1.2"
                android:layout_width="0dp"
                android:layout_height="2dp"/>
        </LinearLayout>
    </LinearLayout>
    <ImageButton
        android:id="@+id/login_facebook"
        android:background="@android:color/transparent"
        android:scaleType="centerCrop"
        android:alpha="0.8"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:src="@drawable/facebook_icon"
        android:layout_width="44dp"
        android:layout_height="44dp"
        tools:ignore="ContentDescription" />

</RelativeLayout>